# dao-contracts

./: Cargo.toml  justfile
contracts/dao-dao-core/src/: contract.rs
contracts/proposal/dao-proposal-instant/: Cargo.toml  README.md
contracts/proposal/dao-proposal-instant/examples/: schema.rs
contracts/proposal/dao-proposal-instant/schema/: dao-proposal-single.json
contracts/proposal/dao-proposal-instant/src/: contract.rs
contracts/proposal/dao-proposal-single-instant/: Cargo.toml  README.md
contracts/proposal/dao-proposal-single-instant/examples/: schema.rs
contracts/proposal/dao-proposal-single-instant/schema/: dao-proposal-single.json
contracts/proposal/dao-proposal-single-instant/src/: contract.rs  error.rs  msg.rs  proposal.rs  query.rs  state.rs
contracts/proposal/dao-proposal-single-instant/src/testing/: adversarial_tests.rs  do_votes.rs  execute.rs  migration_tests.rs  mod.rs  test_tube.rs  tests.rs
scripts/: create-qsr-dao-on-osmo-testnet-gentx.sh
