[package]
name = "dao-proposal-single-instant"
authors = ["ekez <ekez@withoutdoing.com>"]
description = "A DAO DAO proposal module for single choice (yes / no) voting."
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw4 = { workspace = true } # moved for single-instant
cw4-group = { workspace = true } # moved for single-instant
dao-voting-cw4 = { workspace = true } # moved for single-instant
sha2 = { version = "0.10.7"}
ripemd = "0.1.1" # this could be deprecated by using sha2 only
bech32 = "0.9.0" # moved for single-instant
serde-json-wasm = "1.0.1"
base64 = "0.21.7"
tiny-bip39 = "1.0.0"

cosmwasm-std = { workspace = true, features = ["ibc3"] }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw3 = { workspace = true }
thiserror = { workspace = true }

dao-dao-macros = { workspace = true }
dao-pre-propose-base = { workspace = true }
dao-interface = { workspace = true }
dao-voting = { workspace = true }
cw-hooks = { workspace = true }
dao-hooks = { workspace = true }

cw-utils-v1 = { workspace = true}
voting-v1 = { workspace = true }
cw-proposal-single-v1 = { workspace = true, features = ["library"] }

[dev-dependencies]
anyhow = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-multi-test = { workspace = true }
dao-dao-core = { workspace = true }
dao-voting-cw4 = { workspace = true }
dao-voting-cw20-balance = { workspace = true }
dao-voting-cw20-staked = { workspace = true }
dao-voting-token-staked = { workspace = true }
dao-voting-cw721-staked = { workspace = true }
dao-pre-propose-single = { workspace = true }
cw-denom = { workspace = true }
dao-testing = { workspace = true }
cw20-stake = { workspace = true }
cw20-base = { workspace = true }
cw721-base = { workspace = true }
cw4 = { workspace = true }
cw4-group = { workspace = true }
cw-core-v1 = { workspace = true, features = ["library"] }
#cosmrs = { workspace = true } # added for single-instant
osmosis-test-tube = { workspace = true } # added for single-instant